# kubewatch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  main.cpp  release-please-config.json
.github/pages/: index.html
.github/workflows/: build-release.yml
cmake/: ReadVersion.cmake  version.h.in
include/components/: PageableTable.h
include/dialogs/: EditResourceDialog.h  IngressDetailsDialog.h  JobDetailsDialog.h  LoginDialog.h  LogsDialog.h  NodeDetailsDialog.h  OtpDialog.h  PodDetailsDialog.h  ServiceDetailsDialog.h
include/kubectl/: KubectlClient.h
include/onelogin/: OneLoginAuth.h
include/tables/: GenericTable.h  JobsTable.h  KubeTable.h  NamespacesTable.h  NodesTable.h  PodsTable.h  ServicesTable.h
include/utils/: Configuration.h  DateTimeUtils.h  EventBus.h  IconUtils.h  JsonUtils.h  KubeFormat.h  Logging.h  PrefixFilterModel.h  UpdateChecker.h
installer/: build-installer.ps1
installer/config/: config.xml.in
resources/: awsmock-qt-ui.qrc  awsmock-qt-ui.qrc.depends  kubewatch.rc
resources/common/: generate_icon.py
resources/docs/application/: Dockerfile.md  Environment.md
resources/styles/: dark.qss  light.qss
src/components/: PageableTable.cpp  PageableTable.ui
src/dialogs/: EditResourceDialog.cpp  IngressDetailsDialog.cpp  JobDetailsDialog.cpp  LoginDialog.cpp  LogsDialog.cpp  NodeDetailsDialog.cpp  OtpDialog.cpp  PodDetailsDialog.cpp  ServiceDetailsDialog.cpp
src/kubectl/: KubectlClient.cpp
src/onelogin/: OneLoginAuth.cpp
src/tables/: GenericTable.cpp  JobsTable.cpp  NamespacesTable.cpp  NodesTable.cpp  PodsTable.cpp  ServicesTable.cpp
src/utils/: Configuration.cpp  IconUtils.cpp  KubeFormat.cpp  PrefixFilterModel.cpp
